--- a/homepage/index.html
+++ b/homepage/index.html
@@ -46,7 +46,7 @@ Newer Fritz!Box models manage contacts by providing an internal phone book.
 This phone book can be exported an stored in a xml-file on your local computer.
 You can save this xml-file on the SD-card of your phone.</p>
 <h3>Installing FritzContact</h3>
-<p>FritzContact is available on the <a href="http://developer.berlios.de/projects/fritzcontact/">project site</a> as an '.apk'-file.
+Use one of the market places described below to obtain FritzContact for free.
 You can install the app by pushing the file on the SD-card an navigating a file-browser to the apk-file.</p>
 <h3>Running FritzContact</h3>
 <p>The design is pretty straight-forward.
@@ -81,9 +81,11 @@ But I have published the app on the following locations:
 <li><a href="http://www.aproov.com/en-us/cat/Messaging/Phone?pid=bf4ce0e4-9b3d-98f2-0a70-8f1a0b6d0054">Aproov</a></li>
 <li><a href="http://www.getjar.com/fritzcontact">GetJar</a></li>
 </ul>
-<p>The project is hosted by
+<p>The project is supported by
 <a href="//developer.berlios.de/projects/fritzcontact/">
 <img src="//developer.berlios.de/bslogo.php?group_id=0&amp;type=1" width="124" height="32" alt="BerliOS Logo"/></a>
+and <a href="http://savannah.gnu.org/">Gnu Savannah</a>
 </p>
+
 </body>
 </html>
